--- a/apple.html
+++ b/apple.html
@@ -25,11 +25,16 @@
           <div class="headerbichig">Entertainment</div>
           <div class="headerbichig">Accessories</div>
           <div class="headerbichig">Support</div>
-          <div class="jijiglogo">
-            <img src="./Item → Button - Search apple.com.png" alt="" />
-          </div>
-          <div class="jijiglogo"><img src="./tsunhnii logo.png" alt="" /></div>
         </nav>
+      </div>
+      <div class="jijiglogonuud">
+        <div class="jijiglogo">
+          <img src="./Item → Button - Search apple.com.png" alt="" />
+        </div>
+        <div class="jijiglogo">
+          <img src="./tsunhnii logo.png" alt="" />
+        </div>
+        <div class="jijiglogo2zuraas"><img src="./SVG.png" alt="" /></div>
       </div>
     </header>
     <div id="layout">
@@ -66,15 +71,14 @@
             </div>
             <button class="shopgifts">Shop gifts</button>
           </div>
-        </div>
-        <div class="page2">
-          <div class="ipadair">
-            <div class="pizda">
-              <div class="ipadairniilsen">
-                <div class="ipadzurag">
+
+          <div class="buurtomipad">
+            <div class="pizda-ve">
+              <div class="ipadairniilsentablet">
+                <div class="ipadzuragtablet">
                   <img src="./ipadairehnii.png" alt="" />
                 </div>
-                <div class="ipadairbichig">
+                <div class="ipadairbichigtablet">
                   Two sizes. Faster chip. Does it all.
                 </div>
               </div>
@@ -83,75 +87,156 @@
                 <button class="buy">Buy</button>
               </div>
             </div>
+
             <div class="ungutbichig">
-              <span style="color: rgb(red, green, blue)">
-                Hello, Apple Intelligence</span
-              >
+              <span> Hello, Apple Intelligence</span>
             </div>
           </div>
-          <div class="airpod">
-            <div class="airpodniilsen">
-              <div class="airpodbugd">
-                <div class="airpodtext">Airpods Pro 2</div>
-                <div class="airpodbichig">Now with a Hearing Aid feature.2</div>
-              </div>
-              <div class="sda">
-                <button class="learnmore">Learn more</button>
-                <button class="buy">Buy</button>
-              </div>
-            </div>
-          </div>
-          <div class="iwatch">
-            <div class="iwatchniilsen">
-              <div class="iwatchbugd">
-                <div class="iwatchzurag">
-                  <img src="./iwatchehlel.png" alt="" />
+        </div>
+
+        <div class="page2">
+          <div class="ehniidiv">
+            <div class="ipadair">
+              <div class="ipadair-text">
+                <div class="ipadairniilsen">
+                  <div class="ipadzurag">
+                    <img src="./ipadairehnii.png" alt="" />
+                  </div>
+
+                  <div class="ipadairbichig">
+                    Two sizes. Faster chip. Does it all.
+                  </div>
                 </div>
-                <div class="series10">SERIES 10</div>
-                <div class="iwatchbichig">Thinstant classic.</div>
-              </div>
-              <div class="sda">
-                <button class="learnmore">Learn more</button>
-                <button class="buy">Buy</button>
-              </div>
-            </div>
-          </div>
-          <div class="macbook">
-            <div class="macbookniilsen">
-              <div class="macbookbugd">
-                <div class="macbooktext">MacBook Air</div>
-                <div class="macbookbichig">Lean. Mean. M3 machine</div>
-              </div>
-              <div class="sda">
-                <button class="learnmore">Learn more</button>
-                <button class="buy">Buy</button>
-              </div>
-            </div>
-          </div>
-          <div class="tradein">
-            <div class="tradeinbugd">
-              <div class="tradeinniilsen">
-                <div class="tradeinzurag">
-                  <img src="./tradein.png" alt="" />
+                <div class="sda">
+                  <button class="learnmore">Learn more</button>
+                  <button class="buy">Buy</button>
                 </div>
-                <div class="tradeintext">Get $180-$650 in credit when you</div>
-                <div class="tradeintext">trade in iPhone 12 or higher.3</div>
+              </div>
+              <div class="ungutbichigpage2">
+                <span> Hello, Apple Intelligence</span>
               </div>
 
-              <button class="getyourestimate">Get your estimate</button>
-            </div>
-          </div>
-          <div class="card">
-            <div class="cardzuragbugd">
-              <div class="cardzuragniilsen">
-                <div class="cardzurag"><img src="./card.png" alt="" /></div>
-                <div class="cardbichig">
-                  Get up to 3% Daily Cash back with every purchase.
+              <div class="pizda">
+                <div class="airpodniilsentablet">
+                  <div class="airpod4bugd">
+                    <div class="airpod4text">Airpods 4</div>
+                    <div class="airpod4bichig">
+                      Iconic. Now supersonic. <br />
+                      Available with Active Noise <br />
+                      Cancellation.2
+                    </div>
+                  </div>
+                </div>
+                <div class="sdatablet">
+                  <button class="learnmore">Learn more</button>
+                  <button class="buy">Buy</button>
                 </div>
               </div>
-              <div class="sda">
-                <button class="learnmore">Learn more</button>
-                <button class="buy">Buy</button>
+            </div>
+            <div class="airpod">
+              <div class="airpodniilsen">
+                <div class="airpodbugd">
+                  <div class="airpodtext">Airpods Pro 2</div>
+                  <div class="airpodbichig">
+                    Now with a Hearing Aid feature.2
+                  </div>
+                </div>
+                <div class="sda">
+                  <button class="learnmore">Learn more</button>
+                  <button class="buy">Buy</button>
+                </div>
+              </div>
+            </div>
+            <div class="carrier">
+              <div class="carrierniilsen">
+                <div class="carrierbugd">
+                  <div class="carriertext">Carrier deals at Apple</div>
+                  <div class="carrierbichig">
+                    Get up to $1000 in credit on <br />
+                    a new iPhone. Trade-in may <br />
+                    be required.
+                  </div>
+                </div>
+                <div class="sda">
+                  <button class="learnmoretabletcarrier">Find your deal</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="hoyrdahidiv">
+            <div class="iwatch">
+              <div class="iwatchniilsen">
+                <div class="iwatchbugd">
+                  <div class="iwatchzurag">
+                    <img src="./iwatchehlel.png" alt="" />
+                  </div>
+                  <div class="series10">SERIES 10</div>
+                  <div class="iwatchbichig">Thinstant classic.</div>
+                </div>
+                <div class="sda">
+                  <button class="learnmore">Learn more</button>
+                  <button class="buy">Buy</button>
+                </div>
+              </div>
+            </div>
+            <div class="macbook">
+              <div class="macbookniilsen">
+                <div class="macbookbugd">
+                  <div class="macbooktext">MacBook Air</div>
+                  <div class="macbookbichig">Lean. Mean. M3 machine</div>
+                </div>
+                <div class="sda">
+                  <button class="learnmore">Learn more</button>
+                  <button class="buy">Buy</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="guravdahidiv">
+            <div class="tradein">
+              <div class="tradeinbugd">
+                <div class="tradeinniilsen">
+                  <div class="tradeinzurag">
+                    <img src="./tradein.png" alt="" />
+                  </div>
+                  <div class="tradeintext">
+                    Get $180-$650 in credit when you
+                  </div>
+                  <div class="tradeintext">trade in iPhone 12 or higher.3</div>
+                </div>
+
+                <button class="getyourestimate">Get your estimate</button>
+              </div>
+            </div>
+            <div class="card">
+              <div class="cardzuragbugd">
+                <div class="cardzuragniilsen">
+                  <div class="cardzurag"><img src="./card.png" alt="" /></div>
+                  <div class="cardbichig">
+                    Get up to 3% Daily Cash back with every purchase.
+                  </div>
+                </div>
+                <div class="sda">
+                  <button class="learnmore">Learn more</button>
+                  <button class="buy">Buy</button>
+                </div>
+              </div>
+            </div>
+            <div class="applebusiness">
+              <div class="applebusinessniilsen">
+                <div class="applebusinessbugd">
+                  <div class="applebusinesstext">
+                    Apple for <br />
+                    Small Business
+                  </div>
+                  <div class="applebusinessbichig">
+                    Hardware, software, and <br />
+                    expert help - all in one place.
+                  </div>
+                </div>
+                <div class="sda">
+                  <button class="learnmoretablet">Learn more</button>
+                </div>
               </div>
             </div>
           </div>
@@ -246,6 +331,21 @@
       <footer>
         <div class="animation">
           <div class="group">
+            <div class="animationzurag1"></div>
+            <div class="animationzurag2"></div>
+            <div class="animationzurag3"></div>
+            <div class="animationzurag4"></div>
+            <div class="animationzurag5"></div>
+            <div class="animationzurag6"></div>
+            <div class="animationzurag7">
+              <div class="dotorzurag7"><img src="./rnb.jpg" alt="" /></div>
+              <div class="dotorbichig7">R&B Now</div>
+            </div>
+            <div class="animationzurag8"></div>
+            <div class="animationzurag9"></div>
+            <div class="animationzurag10"></div>
+          </div>
+          <div aria-hidden class="group">
             <div class="animationzurag1"></div>
             <div class="animationzurag2"></div>
             <div class="animationzurag3"></div>
