--- a/apple.html
+++ b/apple.html
@@ -44,8 +44,8 @@
           Apple Pay at Apple. Through 12/8
         </div>
         <div class="arvanzurgaapro">
-          <div class="bichig">
-            <div class="ip16">Iphone 16 Pro</div>
+          <div class="bichigehnii">
+            <div class="ip16">iPhone 16 Pro</div>
             <div class="hello-apple-bichig">Hello, Apple Intelligence</div>
             <div class="sda">
               <button class="learnmore">Learn more</button>
@@ -54,8 +54,8 @@
           </div>
         </div>
         <div class="arvanzurgaa">
-          <div class="bichig">
-            <div class="ip16">Iphone 16</div>
+          <div class="bichig2dahi">
+            <div class="ip16">iPhone 16</div>
             <div class="hello-apple-bichig">Hello, Apple Intelligence</div>
             <div class="sda">
               <button class="learnmore">Learn more</button>
@@ -344,8 +344,7 @@
             <div class="animationzurag8"></div>
             <div class="animationzurag9"></div>
             <div class="animationzurag10"></div>
-          </div>
-          <div aria-hidden class="group">
+
             <div class="animationzurag1"></div>
             <div class="animationzurag2"></div>
             <div class="animationzurag3"></div>
