class name zassan

--- a/apple.html
+++ b/apple.html
@@ -73,7 +73,7 @@
           </div>
 
           <div class="buurtomipad">
-            <div class="pizda-ve">
+            <div class="airpodall-ve">
               <div class="ipadairniilsentablet">
                 <div class="ipadzuragtablet">
                   <img src="./ipadairehnii.png" alt="" />
@@ -116,7 +116,7 @@
                 <span> Hello, Apple Intelligence</span>
               </div>
 
-              <div class="pizda">
+              <div class="airpodall">
                 <div class="airpodniilsentablet">
                   <div class="airpod4bugd">
                     <div class="airpod4text">Airpods 4</div>
